[package]
name = "Middleware"
version = "0.1.0"
authors = ["McTwist"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"

serde = "1.0"
serde_derive = "1.0"
